cmake_minimum_required(VERSION 4.0)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../scripts/cmake")
include(defold)

project(defold_graphics LANGUAGES ${DEFOLD_LANGUAGE_LIST})

add_compile_definitions(DLIB_LOG_DOMAIN="GRAPHICS")

set(GRAPHICS_ROOT "${CMAKE_CURRENT_LIST_DIR}")
set(GRAPHICS_SRC_DIR "${GRAPHICS_ROOT}/src")
set(GRAPHICS_PROTO_ROOT "${GRAPHICS_ROOT}/proto")
set(GRAPHICS_PROTO "${GRAPHICS_PROTO_ROOT}/graphics/graphics_ddf.proto")
set(GRAPHICS_GEN_DIR "${CMAKE_CURRENT_BINARY_DIR}/graphics")
set(GRAPHICS_PROTO_CC "${GRAPHICS_GEN_DIR}/graphics_ddf.cpp")
set(GRAPHICS_PROTO_H "${GRAPHICS_GEN_DIR}/graphics_ddf.h")
set(GRAPHICS_PROTO_PY_DIR "${CMAKE_CURRENT_BINARY_DIR}/python/graphics")
set(GRAPHICS_PROTO_PY "${GRAPHICS_PROTO_PY_DIR}/graphics_ddf_pb2.py")
set(GRAPHICS_PROTO_PY_INIT "${GRAPHICS_PROTO_PY_DIR}/__init__.py")
set(GRAPHICS_BPROTO "${GRAPHICS_GEN_DIR}/graphics_ddf.bproto")

defold_protoc_gen_cpp("${GRAPHICS_PROTO_CC}" "${GRAPHICS_PROTO}" INCLUDES "${GRAPHICS_PROTO_ROOT}")
defold_protoc_gen_py("${GRAPHICS_PROTO_PY}" "${GRAPHICS_PROTO}" PYTHON_ROOT "${CMAKE_CURRENT_BINARY_DIR}/python" INCLUDES "${GRAPHICS_PROTO_ROOT}")
defold_protoc_gen_bproto("${GRAPHICS_BPROTO}" "${GRAPHICS_PROTO}" INCLUDES "${GRAPHICS_PROTO_ROOT}")
add_custom_target(graphics_proto_header DEPENDS "${GRAPHICS_PROTO_CC}" "${GRAPHICS_PROTO_H}")
add_custom_target(graphics_proto_py ALL DEPENDS "${GRAPHICS_PROTO_PY}" "${GRAPHICS_PROTO_PY_INIT}")
add_custom_target(graphics_bproto ALL DEPENDS "${GRAPHICS_BPROTO}")

function(graphics_target_os out_var)
  if(TARGET_PLATFORM MATCHES "win32$")
    set(_target_os "win32")
  elseif(TARGET_PLATFORM MATCHES "macos$")
    set(_target_os "osx")
  elseif(TARGET_PLATFORM MATCHES "ios$")
    set(_target_os "ios")
  elseif(TARGET_PLATFORM MATCHES "android$")
    set(_target_os "android")
  elseif(TARGET_PLATFORM MATCHES "linux$")
    set(_target_os "linux")
  elseif(TARGET_PLATFORM MATCHES "web$")
    set(_target_os "web")
  elseif(TARGET_PLATFORM MATCHES "nx64$")
    set(_target_os "nx64")
  else()
    set(_target_os "${TARGET_PLATFORM_OS}")
  endif()
  set(${out_var} "${_target_os}" PARENT_SCOPE)
endfunction()

function(graphics_native_source out_var feature)
  graphics_target_os(_target_os)
  if(EXISTS "${GRAPHICS_SRC_DIR}/${_target_os}/graphics_native.cpp")
    set(_native "${GRAPHICS_SRC_DIR}/${_target_os}/graphics_native.cpp")
  else()
    set(_native "${GRAPHICS_SRC_DIR}/${feature}/graphics_native.cpp")
  endif()
  set(${out_var} "${_native}" PARENT_SCOPE)
endfunction()

function(graphics_common_setup target)
  target_include_directories(${target} PUBLIC
    "${GRAPHICS_SRC_DIR}"
    "${GRAPHICS_PROTO_ROOT}"
    "${CMAKE_CURRENT_BINARY_DIR}")
  target_compile_definitions(${target} PRIVATE "DLIB_LOG_DOMAIN=\"GRAPHICS\"")
  add_dependencies(${target} graphics_proto_py graphics_bproto)
endfunction()

set(GRAPHICS_PROTO_SOURCES "${GRAPHICS_SRC_DIR}/graphics_proto.cpp" "${GRAPHICS_PROTO_CC}")

defold_add_library(graphics_proto STATIC ${GRAPHICS_PROTO_SOURCES})
graphics_common_setup(graphics_proto)
defold_target_link_libraries(graphics_proto "${TARGET_PLATFORM}" SCOPE PUBLIC ddf dlib image)

defold_add_library(graphics_proto_noasan STATIC ${GRAPHICS_PROTO_SOURCES})
graphics_common_setup(graphics_proto_noasan)
defold_target_link_libraries(graphics_proto_noasan "${TARGET_PLATFORM}" SCOPE PUBLIC ddf dlib image_noasan)

file(GLOB GRAPHICS_CORE_SOURCES CONFIGURE_DEPENDS "${GRAPHICS_SRC_DIR}/*.cpp")
file(GLOB GRAPHICS_NULL_SOURCES CONFIGURE_DEPENDS "${GRAPHICS_SRC_DIR}/null/*.cpp")
set(GRAPHICS_NULL_ALL_SOURCES ${GRAPHICS_CORE_SOURCES} ${GRAPHICS_NULL_SOURCES} "${GRAPHICS_PROTO_CC}")
list(FILTER GRAPHICS_NULL_ALL_SOURCES EXCLUDE REGEX "/graphics_glfw_wrappers\\.cpp$")

defold_add_library(graphics_null STATIC ${GRAPHICS_NULL_ALL_SOURCES})
graphics_common_setup(graphics_null)
target_include_directories(graphics_null PUBLIC "${GRAPHICS_SRC_DIR}/null")
target_compile_definitions(graphics_null PUBLIC DM_GRAPHICS_NULL)
defold_target_link_libraries(graphics_null "${TARGET_PLATFORM}" SCOPE PUBLIC ddf dlib image platform_null)

defold_add_library(graphics_null_noasan STATIC ${GRAPHICS_NULL_ALL_SOURCES})
graphics_common_setup(graphics_null_noasan)
target_include_directories(graphics_null_noasan PUBLIC "${GRAPHICS_SRC_DIR}/null")
target_compile_definitions(graphics_null_noasan PUBLIC DM_GRAPHICS_NULL)
defold_target_link_libraries(graphics_null_noasan "${TARGET_PLATFORM}" SCOPE PUBLIC ddf dlib image_noasan platform_null)

set(GRAPHICS_INSTALL_TARGETS graphics_proto graphics_proto_noasan graphics_null graphics_null_noasan)

set(GRAPHICS_PLATFORM_SUPPORTS_OPENGL ON)
set(GRAPHICS_PLATFORM_SUPPORTS_OPENGLES OFF)
set(GRAPHICS_PLATFORM_SUPPORTS_VULKAN ON)
set(GRAPHICS_PLATFORM_SUPPORTS_DX12 OFF)
set(GRAPHICS_PLATFORM_SUPPORTS_WEBGPU OFF)
if(TARGET_PLATFORM MATCHES "^(wasm-web|wasm_pthread-web)$")
  set(GRAPHICS_PLATFORM_SUPPORTS_VULKAN OFF)
  set(GRAPHICS_PLATFORM_SUPPORTS_WEBGPU ON)
endif()
if(TARGET_PLATFORM STREQUAL "x86_64-ios")
  set(GRAPHICS_PLATFORM_SUPPORTS_VULKAN OFF)
endif()
if(TARGET_PLATFORM STREQUAL "arm64-linux")
  set(GRAPHICS_PLATFORM_SUPPORTS_OPENGLES ON)
endif()
if(TARGET_PLATFORM STREQUAL "x86_64-win32")
  set(GRAPHICS_PLATFORM_SUPPORTS_DX12 ON)
endif()

file(GLOB GRAPHICS_OPENGL_SOURCES CONFIGURE_DEPENDS "${GRAPHICS_SRC_DIR}/*.cpp" "${GRAPHICS_SRC_DIR}/opengl/*.cpp")
if(GRAPHICS_PLATFORM_SUPPORTS_OPENGL)
  defold_add_library(graphics STATIC ${GRAPHICS_OPENGL_SOURCES} "${GRAPHICS_PROTO_CC}")
  graphics_common_setup(graphics)
  target_include_directories(graphics PUBLIC "${GRAPHICS_SRC_DIR}/opengl")
  if(TARGET_PLATFORM MATCHES "win32$")
    target_include_directories(graphics PUBLIC "${GRAPHICS_SRC_DIR}/opengl/win32")
  endif()
  target_compile_definitions(graphics PUBLIC DM_GRAPHICS_USE_OPENGL)
  defold_target_link_libraries(graphics "${TARGET_PLATFORM}" SCOPE PUBLIC ddf dlib image platform)
  list(APPEND GRAPHICS_INSTALL_TARGETS graphics)
endif()

if(GRAPHICS_PLATFORM_SUPPORTS_OPENGLES)
  defold_add_library(graphics_opengles STATIC ${GRAPHICS_OPENGL_SOURCES} "${GRAPHICS_PROTO_CC}")
  graphics_common_setup(graphics_opengles)
  target_include_directories(graphics_opengles PUBLIC "${GRAPHICS_SRC_DIR}/opengl")
  target_compile_definitions(graphics_opengles PUBLIC DM_GRAPHICS_USE_OPENGLES DM_HAVE_PLATFORM_COMPUTE_SUPPORT)
  defold_target_link_libraries(graphics_opengles "${TARGET_PLATFORM}" SCOPE PUBLIC ddf dlib image platform)
  list(APPEND GRAPHICS_INSTALL_TARGETS graphics_opengles)
endif()

if(GRAPHICS_PLATFORM_SUPPORTS_WEBGPU)
  file(GLOB GRAPHICS_WEBGPU_SOURCES CONFIGURE_DEPENDS "${GRAPHICS_SRC_DIR}/*.cpp" "${GRAPHICS_SRC_DIR}/webgpu/*.cpp")
  foreach(_webgpu_target IN ITEMS graphics_webgpu graphics_webgpu_wagyu)
    if(_webgpu_target STREQUAL "graphics_webgpu_wagyu")
      set(_webgpu_define DM_GRAPHICS_WEBGPU_WAGYU)
    else()
      set(_webgpu_define DM_GRAPHICS_WEBGPU)
    endif()
    defold_add_library(${_webgpu_target} STATIC ${GRAPHICS_WEBGPU_SOURCES} "${GRAPHICS_PROTO_CC}")
    graphics_common_setup(${_webgpu_target})
    target_include_directories(${_webgpu_target} PUBLIC "${GRAPHICS_SRC_DIR}/webgpu")
    target_compile_definitions(${_webgpu_target} PUBLIC ${_webgpu_define})
    defold_target_link_libraries(${_webgpu_target} "${TARGET_PLATFORM}" SCOPE PUBLIC ddf dlib image)
    list(APPEND GRAPHICS_INSTALL_TARGETS ${_webgpu_target})
  endforeach()
  target_compile_options(graphics_webgpu_wagyu PRIVATE "--use-port=${DEFOLD_SDK_ROOT}/ext/wagyu-port/webgpu-port.py:wagyu=true")
endif()

if(GRAPHICS_PLATFORM_SUPPORTS_VULKAN)
  file(GLOB GRAPHICS_VULKAN_SOURCES CONFIGURE_DEPENDS "${GRAPHICS_SRC_DIR}/*.cpp" "${GRAPHICS_SRC_DIR}/vulkan/*.cpp")
  list(FILTER GRAPHICS_VULKAN_SOURCES EXCLUDE REGEX "/vulkan/graphics_native\\.cpp$")
  graphics_native_source(_graphics_vulkan_native "vulkan")
  list(APPEND GRAPHICS_VULKAN_SOURCES "${_graphics_vulkan_native}")
  if(TARGET_PLATFORM MATCHES "^(x86_64-macos|arm64-macos|x86_64-win32|x86-win32|x86_64-linux|arm64-linux)$")
    list(APPEND GRAPHICS_VULKAN_SOURCES "${GRAPHICS_SRC_DIR}/vulkan/desktop/graphics_vulkan_surface.cpp")
    if(TARGET_PLATFORM MATCHES "^(x86_64-macos|arm64-macos)$")
      list(APPEND GRAPHICS_VULKAN_SOURCES "${GRAPHICS_SRC_DIR}/vulkan/osx/graphics_vulkan_osx.mm")
    endif()
  elseif(TARGET_PLATFORM STREQUAL "arm64-ios")
    list(APPEND GRAPHICS_VULKAN_SOURCES
      "${GRAPHICS_SRC_DIR}/vulkan/ios/graphics_vulkan_ios_surface.mm"
      "${GRAPHICS_SRC_DIR}/vulkan/osx/graphics_vulkan_osx.mm")
  elseif(TARGET_PLATFORM MATCHES "^(armv7-android|arm64-android)$")
    list(APPEND GRAPHICS_VULKAN_SOURCES
      "${GRAPHICS_SRC_DIR}/vulkan/android/graphics_vulkan_android_surface.cpp"
      "${GRAPHICS_SRC_DIR}/vulkan/android/graphics_vulkan_android.cpp")
  endif()
  if(TARGET_PLATFORM STREQUAL "arm64-nx64")
    list(FILTER GRAPHICS_VULKAN_SOURCES EXCLUDE REGEX "/graphics_glfw_wrappers\\.cpp$")
  endif()

  defold_add_library(graphics_vulkan STATIC ${GRAPHICS_VULKAN_SOURCES} "${GRAPHICS_PROTO_CC}")
  graphics_common_setup(graphics_vulkan)
  target_include_directories(graphics_vulkan PUBLIC "${GRAPHICS_SRC_DIR}/vulkan")
  if(WITH_VULKAN_VALIDATION)
    target_compile_definitions(graphics_vulkan PUBLIC DM_VULKAN_VALIDATION=1)
  endif()
  if(TARGET platform_vulkan)
    defold_target_link_libraries(graphics_vulkan "${TARGET_PLATFORM}" SCOPE PUBLIC ddf dlib image platform_vulkan)
  else()
    defold_target_link_libraries(graphics_vulkan "${TARGET_PLATFORM}" SCOPE PUBLIC ddf dlib image platform)
  endif()
  list(APPEND GRAPHICS_INSTALL_TARGETS graphics_vulkan)
endif()

if(GRAPHICS_PLATFORM_SUPPORTS_DX12)
  file(GLOB GRAPHICS_DX12_SOURCES CONFIGURE_DEPENDS "${GRAPHICS_SRC_DIR}/*.cpp" "${GRAPHICS_SRC_DIR}/dx12/*.cpp")
  defold_add_library(graphics_dx12 STATIC ${GRAPHICS_DX12_SOURCES} "${GRAPHICS_PROTO_CC}")
  graphics_common_setup(graphics_dx12)
  target_include_directories(graphics_dx12 PUBLIC
    "${GRAPHICS_SRC_DIR}/dx12"
    "${DEFOLD_EXT_INCLUDE_DIR}/directx")
  defold_target_link_libraries(graphics_dx12 "${TARGET_PLATFORM}" SCOPE PUBLIC ddf dlib image platform)
  list(APPEND GRAPHICS_INSTALL_TARGETS graphics_dx12)
endif()

defold_add_library(graphics_transcoder_null STATIC "${GRAPHICS_SRC_DIR}/transcoder/graphics_transcoder_null.cpp")
target_include_directories(graphics_transcoder_null PUBLIC "${GRAPHICS_SRC_DIR}" "${GRAPHICS_PROTO_ROOT}" "${CMAKE_CURRENT_BINARY_DIR}")
add_dependencies(graphics_transcoder_null graphics_proto_header)
defold_target_link_libraries(graphics_transcoder_null "${TARGET_PLATFORM}" SCOPE PUBLIC dlib)

defold_add_library(graphics_transcoder_basisu STATIC "${GRAPHICS_SRC_DIR}/transcoder/graphics_transcoder_basisu.cpp")
target_include_directories(graphics_transcoder_basisu PUBLIC "${GRAPHICS_SRC_DIR}" "${GRAPHICS_PROTO_ROOT}" "${CMAKE_CURRENT_BINARY_DIR}")
add_dependencies(graphics_transcoder_basisu graphics_proto_header)
defold_target_link_libraries(graphics_transcoder_basisu "${TARGET_PLATFORM}" SCOPE PUBLIC dlib basis_transcoder)

list(APPEND GRAPHICS_INSTALL_TARGETS graphics_transcoder_null graphics_transcoder_basisu)

defold_install_targets(TARGETS ${GRAPHICS_INSTALL_TARGETS}
        ARCHIVE DESTINATION lib/${TARGET_PLATFORM}
        LIBRARY DESTINATION lib/${TARGET_PLATFORM}
        RUNTIME DESTINATION bin/${TARGET_PLATFORM})

install(FILES
  "${GRAPHICS_SRC_DIR}/graphics.h"
  "${GRAPHICS_SRC_DIR}/graphics_util.h"
  "${GRAPHICS_SRC_DIR}/graphics_native.h"
  ${GRAPHICS_PROTO_H}
  DESTINATION include/graphics)
install(FILES "${GRAPHICS_SRC_DIR}/opengl/win32/glext.h" DESTINATION include/graphics/opengl/win32)
install(FILES "${GRAPHICS_SRC_DIR}/opengl/graphics_opengl_defines.h" DESTINATION include/graphics/opengl)
install(FILES "${GRAPHICS_PROTO}" DESTINATION share/proto/graphics)
install(FILES "${GRAPHICS_BPROTO}" DESTINATION share/proto/graphics)
install(FILES "${GRAPHICS_SRC_DIR}/texc.py" DESTINATION bin)
install(FILES "${GRAPHICS_SRC_DIR}/waf_graphics.py" DESTINATION lib/python)
install(FILES "${GRAPHICS_PROTO_PY_INIT}" "${GRAPHICS_PROTO_PY}" DESTINATION lib/python/graphics)
install(DIRECTORY "${GRAPHICS_SRC_DIR}/dmsdk/" DESTINATION sdk/include/dmsdk FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")

if(BUILD_TESTS)
  add_subdirectory(src/test)
endif()
